Fix search box on mobile
Summary: Makes the search box on mobile look as expected.

Test Plan: Test Desktop, Tablet, and Mobile Search.

Reviewers: epriestley, btrahan

Reviewed By: epriestley

CC: aran, Korvin

Differential Revision: https://secure.phabricator.com/D5908

--- a/webroot/rsrc/css/application/base/main-menu-view.css
+++ b/webroot/rsrc/css/application/base/main-menu-view.css
@@ -131,7 +131,7 @@
 
 .device .phabricator-main-menu-search-container {
   padding: 0;
-  margin: 0 8px 0 52px;
+  margin: 0 8px ;
 }
 
 .phabricator-main-menu .phabricator-main-menu-search input {
@@ -154,7 +154,7 @@
 }
 
 .device .phabricator-main-menu-search input {
-  height: 16px;
+  height: 30px;
   font-size: 15px;
   border-radius: 15px;
 }
